--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,15 +5,11 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
-        {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
-        {% endblock %}
-
-        {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
-        {% endblock %}
+        {% block css %}{% endblock %}
+        {% block jsHead %}{% endblock %}
     </head>
     <body>
         {% block body %}{% endblock %}
+        {% block jsBody %}{% endblock %}
     </body>
 </html>
